--- a/FAQ.html
+++ b/FAQ.html
@@ -20,7 +20,9 @@
       <div class="logo-container me-3">
         <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
       </div>
-      <h1 class="m-0">Chef's Secret</h1>
+      <a href="index.html" class="text-decoration-none text-reset">
+        <h1 class="m-0">Chef's Secret</h1>
+      </a>
     </div>
 
     <div class="d-flex align-items-center">
@@ -37,9 +39,11 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ms-auto navbar-nav-custom">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="dishoftheday.html">Dish of the day</a></li>
             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
             <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
+            <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
           </ul>
         </div>
       </nav>
@@ -49,11 +53,11 @@
     <h2 class="text-center mb-4">Frequently Asked Questions</h2>
 
     <div class="text-center mb-4">
-      <input type="text" id="searchInput" class="form-control mx-auto mb-2" style="max-width:400px;" 
-             placeholder="Search for keywords in FAQs...">
+      <input type="text" id="searchInput" class="form-control mx-auto mb-2" style="max-width:400px;"
+        placeholder="Search for keywords in FAQs...">
       <button id="highlightBtn" class="btn btn-primary">Highlight Matches</button>
     </div>
-    
+
     <div class="faq">
       <div class="faq-item">
         <h3 class="faq-question">What is Chef's Secret?</h3>
