--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <div class="logo-container me-3">
         <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
       </div>
-      <h1 class="m-0">Chef's Secret</h1>
+      <a href="index.html" class="text-decoration-none text-reset">
+        <h1 class="m-0">Chef's Secret</h1>
+      </a>
     </div>
 
     <div class="d-flex align-items-center">
@@ -37,14 +39,59 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ms-auto navbar-nav-custom">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="dishoftheday.html">Dish of the day</a></li>
             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
             <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
+            <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
           </ul>
         </div>
       </nav>
     </div>
   </header>
+
+  <!-- Sign Up / Sign In Button -->
+  <div class="text-center my-4">
+    <button id="authBtn" class="auth-btn">Sign Up | Sign In</button>
+  </div>
+
+  <!-- Authentication Popup -->
+  <div id="authOverlay" class="popup-overlay">
+    <div class="popup-box">
+      <span id="authClose" class="close-btn">&times;</span>
+
+      <!-- Choice -->
+      <div id="authChoice" class="text-center">
+        <h4>Choose an option</h4>
+        <div class="d-flex justify-content-center gap-2 mt-3">
+          <button id="showSignUp" class="btn btn-success">Sign Up</button>
+          <button id="showSignIn" class="btn btn-primary">Sign In</button>
+        </div>
+      </div>
+
+      <!-- Sign Up Form -->
+      <form id="signUpForm" class="d-none mt-3">
+        <h5 class="text-center mb-3">Sign Up</h5>
+        <input type="text" id="signupName" class="form-control mb-2" placeholder="Full Name" required>
+        <input type="email" id="signupEmail" class="form-control mb-2" placeholder="Email" required>
+        <input type="tel" id="signupPhone" class="form-control mb-2" placeholder="Phone Number" required>
+        <input type="password" id="signupPassword" class="form-control mb-2" placeholder="Password" required>
+        <button type="submit" class="btn btn-success w-100 mt-2">Register</button>
+      </form>
+
+      <!-- Sign In Form -->
+      <form id="signInForm" class="d-none mt-3">
+        <h5 class="text-center mb-3">Sign In</h5>
+        <input type="email" id="signinEmail" class="form-control mb-2" placeholder="Email" required>
+        <input type="password" id="signinPassword" class="form-control mb-2" placeholder="Password" required>
+        <button type="submit" class="btn btn-primary w-100 mt-2">Login</button>
+      </form>
+    </div>
+  </div>
+
+
+
+
 
   <section id="stats" class="text-center mt-5">
     <h2>Our Culinary Community</h2>
@@ -185,7 +232,7 @@
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
   <audio id="subscribeSound" src="sounds/click.mp3" preload="auto"></audio>
 </body>
