--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="d-flex align-items-center">
       <button id="themeToggle" class="btn btn-outline-secondary me-3" title="Toggle Dark/Light Mode">
-        Light/Dark
+        Dark mode
       </button>
 
       <nav class="navbar navbar-expand-lg p-0">
@@ -50,17 +50,14 @@
     </div>
   </header>
 
-  <!-- Sign Up / Sign In Button -->
   <div class="text-center my-4">
     <button id="authBtn" class="auth-btn">Sign Up | Sign In</button>
   </div>
 
-  <!-- Authentication Popup -->
   <div id="authOverlay" class="popup-overlay">
     <div class="popup-box">
       <span id="authClose" class="close-btn">&times;</span>
 
-      <!-- Choice -->
       <div id="authChoice" class="text-center">
         <h4>Choose an option</h4>
         <div class="d-flex justify-content-center gap-2 mt-3">
@@ -69,7 +66,6 @@
         </div>
       </div>
 
-      <!-- Sign Up Form -->
       <form id="signUpForm" class="d-none mt-3">
         <h5 class="text-center mb-3">Sign Up</h5>
         <input type="text" id="signupName" class="form-control mb-2" placeholder="Full Name" required>
@@ -79,7 +75,6 @@
         <button type="submit" class="btn btn-success w-100 mt-2">Register</button>
       </form>
 
-      <!-- Sign In Form -->
       <form id="signInForm" class="d-none mt-3">
         <h5 class="text-center mb-3">Sign In</h5>
         <input type="email" id="signinEmail" class="form-control mb-2" placeholder="Email" required>
@@ -207,7 +202,7 @@
       </div>
 
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
   <button id="openPopup" class="btn btn-secondary my-4 d-block mx-auto">
     Subscribe
   </button>
