--- a/profile.html
+++ b/profile.html
@@ -51,8 +51,7 @@
     </header>
 
     <main class="container my-5">
-        <div class="profile-card mx-auto p-4 text-center shadow rounded"
-            style="max-width: 400px; background-color: #fff;">
+        <div class="profile-card mx-auto p-4 text-center shadow rounded">
             <h2 class="mb-3">Your Profile</h2>
             <p><strong>Name:</strong> <span id="profileName"></span></p>
             <p><strong>Email:</strong> <span id="profileEmail"></span></p>
